--- a/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/forces-and-motion-basics.properties
+++ b/trunk/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/forces-and-motion-basics.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Tue Oct 23 21:33:23 MDT 2012
-version.revision=69441
+#Wed Dec 05 00:31:32 MST 2012
+version.revision=70978
 version.minor=00
-version.timestamp=1351049603
+version.timestamp=1354692692
+version.dev=01
 version.major=1
-version.dev=00
