--- a/trunk/simulations-java/simulations/fractions/fractions-build.properties
+++ b/trunk/simulations-java/simulations/fractions/fractions-build.properties
@@ -7,3 +7,4 @@ project.depends.lib=piccolo-phet : functionaljava : lombok : games
 project.flavor.fractions-intro.mainclass=edu.colorado.phet.fractions.fractionsintro.FractionsIntroApplication
 project.flavor.fraction-matcher.mainclass=edu.colorado.phet.fractions.fractionmatcher.FractionMatcherApplication
 project.flavor.build-a-fraction.mainclass=edu.colorado.phet.fractions.buildafraction.BuildAFractionApplication
+project.flavor.research-study-2013.mainclass=edu.colorado.phet.fractions.fractionsintro.ResearchStudy2013Application
