fractions: deployed version 1.02.01 (71282) Dec 12, 2012

--- a/simulations-java/simulations/fractions/data/fractions/fractions.properties
+++ b/simulations-java/simulations/fractions/data/fractions/fractions.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Wed Oct 17 09:39:36 MDT 2012
-version.revision=69269
+#Wed Dec 12 21:26:27 MST 2012
+version.revision=71282
 version.minor=02
-version.timestamp=1350488376
+version.timestamp=1355372787
+version.dev=01
 version.major=1
-version.dev=00
