molecule-shapes: deployed version 1.04.04 (71306) Dec 13, 2012

--- a/simulations-java/simulations/molecule-shapes/data/molecule-shapes/molecule-shapes.properties
+++ b/simulations-java/simulations/molecule-shapes/data/molecule-shapes/molecule-shapes.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Tue Dec 11 17:29:21 PST 2012
-version.revision=71217
+#Thu Dec 13 20:09:13 MST 2012
+version.revision=71306
 version.minor=04
-version.timestamp=1355275761
-version.dev=03
+version.timestamp=1355454553
 version.major=1
+version.dev=04
