--- a/trunk/simulations-java/simulations/fluid-pressure-and-flow/data/fluid-pressure-and-flow/fluid-pressure-and-flow.properties
+++ b/trunk/simulations-java/simulations/fluid-pressure-and-flow/data/fluid-pressure-and-flow/fluid-pressure-and-flow.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Tue May 29 12:43:05 MDT 2012
-version.revision=64426
+#Thu Dec 13 23:20:44 MST 2012
+version.revision=71311
 version.minor=00
-version.timestamp=1338316985
-version.dev=00
+version.timestamp=1355466044
 version.major=1
+version.dev=01
