--- a/trunk/simulations-java/simulations/plate-tectonics/data/plate-tectonics/plate-tectonics.properties
+++ b/trunk/simulations-java/simulations/plate-tectonics/data/plate-tectonics/plate-tectonics.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Tue Dec 11 17:07:32 PST 2012
-version.revision=71216
+#Thu Dec 13 23:45:36 MST 2012
+version.revision=71312
 version.minor=01
-version.timestamp=1355274452
-version.dev=04
+version.timestamp=1355467536
 version.major=1
+version.dev=05
