--- a/trunk/simulations-flex/simulations/radiating-charge/data/radiating-charge/radiating-charge.properties
+++ b/trunk/simulations-flex/simulations/radiating-charge/data/radiating-charge/radiating-charge.properties
@@ -1,8 +1,8 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Tue Oct 09 15:40:56 MDT 2012
+#Thu Jan 03 10:32:33 MST 2013
+version.revision=71497
 bgcolor=\#000000
-version.revision=69057
 version.minor=00
-version.timestamp=1349818856
+version.timestamp=1357234353
+version.dev=26
 version.major=1
-version.dev=25
