--- a/simulations-java/simulations/plate-tectonics/data/plate-tectonics/plate-tectonics.properties
+++ b/simulations-java/simulations/plate-tectonics/data/plate-tectonics/plate-tectonics.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Thu Dec 13 23:45:36 MST 2012
-version.revision=71312
+#Thu Jan 24 04:17:35 PST 2013
+version.revision=71850
 version.minor=01
-version.timestamp=1355467536
+version.timestamp=1359029855
+version.dev=06
 version.major=1
-version.dev=05
