molecule-shapes: deployed version 1.04.08 (71851) Jan 24, 2013

--- a/simulations-java/simulations/molecule-shapes/data/molecule-shapes/molecule-shapes.properties
+++ b/simulations-java/simulations/molecule-shapes/data/molecule-shapes/molecule-shapes.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Sat Dec 15 18:21:44 MST 2012
-version.revision=71328
+#Thu Jan 24 09:33:48 PST 2013
+version.revision=71851
 version.minor=04
-version.timestamp=1355620904
+version.timestamp=1359048828
+version.dev=08
 version.major=1
-version.dev=07
