circuit-construction-kit: deployed version 3.20.07 (71891) Jan 29, 2013

--- a/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/circuit-construction-kit.properties
+++ b/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/circuit-construction-kit.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Thu Jul 26 11:47:17 MDT 2012
-version.revision=66288
+#Tue Jan 29 14:12:13 MST 2013
+version.revision=71891
 version.minor=20
-version.timestamp=1343324837
-version.dev=06
+version.timestamp=1359493933
 version.major=3
+version.dev=07
