java-common-strings: deployed version 1.25.00 (71939) Jan 31, 2013

--- a/simulations-java/simulations/java-common-strings/data/java-common-strings/java-common-strings.properties
+++ b/simulations-java/simulations/java-common-strings/data/java-common-strings/java-common-strings.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Thu Jul 05 10:47:56 MDT 2012
-version.revision=65672
-version.minor=24
-version.timestamp=1341506876
-version.dev=00
+#Thu Jan 31 10:04:46 PST 2013
+version.revision=71939
+version.minor=25
+version.timestamp=1359655486
 version.major=1
+version.dev=00
