--- a/trunk/simulations-java/simulations/test-java-project/data/test-java-project/test-java-project.properties
+++ b/trunk/simulations-java/simulations/test-java-project/data/test-java-project/test-java-project.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Sun Nov 25 18:57:33 PST 2012
-version.revision=70622
+#Thu Feb 07 15:15:34 MST 2013
+version.revision=72059
 version.minor=36
-version.timestamp=1353898653
-version.dev=00
+version.timestamp=1360275334
 version.major=2
+version.dev=01
