density-and-buoyancy: deployed version 1.05.07 (72060) Feb 7, 2013

--- a/simulations-flex/simulations/density-and-buoyancy/data/density-and-buoyancy/density-and-buoyancy.properties
+++ b/simulations-flex/simulations/density-and-buoyancy/data/density-and-buoyancy/density-and-buoyancy.properties
@@ -1,8 +1,8 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Tue Aug 30 23:18:38 MDT 2011
-version.revision=55945
+#Thu Feb 07 15:43:21 MST 2013
 bgcolor=\#000000
+version.revision=72060
 version.minor=05
-version.timestamp=1314767918
+version.timestamp=1360277001
+version.dev=07
 version.major=1
-version.dev=06
