--- a/trunk/build-tools/data/build-tools/build-tools.properties
+++ b/trunk/build-tools/data/build-tools/build-tools.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Sat Oct 13 20:51:33 PDT 2012
-version.revision=69195
-version.minor=70
-version.timestamp=1350186693
-version.dev=00
+#Thu Feb 07 16:06:35 MST 2013
+version.revision=72062
+version.minor=71
+version.timestamp=1360278395
 version.major=00
+version.dev=00
