--- a/trunk/simulations-java/simulations/test-java-project/data/test-java-project/test-java-project.properties
+++ b/trunk/simulations-java/simulations/test-java-project/data/test-java-project/test-java-project.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Thu Feb 07 16:18:12 MST 2013
-version.revision=72063
+#Thu Feb 07 15:43:25 PST 2013
+version.revision=72065
 version.minor=36
-version.timestamp=1360279092
-version.dev=02
+version.timestamp=1360280605
 version.major=2
+version.dev=03
