line-graphing: deployed version 1.00.00 (72066) Feb 7, 2013

--- a/simulations-java/simulations/line-graphing/data/line-graphing/line-graphing.properties
+++ b/simulations-java/simulations/line-graphing/data/line-graphing/line-graphing.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Wed Feb 06 18:47:25 MST 2013
-version.revision=72040
+#Thu Feb 07 16:46:39 PST 2013
+version.revision=72066
 version.minor=00
-version.timestamp=1360201645
-version.dev=57
-version.major=0
+version.timestamp=1360284399
+version.major=1
+version.dev=00
