--- a/trunk/simulations-java/simulations/build-an-atom/data/build-an-atom/build-an-atom.properties
+++ b/trunk/simulations-java/simulations/build-an-atom/data/build-an-atom/build-an-atom.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Sat Aug 18 16:03:39 MDT 2012
-version.revision=67107
+#Wed Feb 13 16:04:49 MST 2013
+version.revision=72138
 version.minor=02
-version.timestamp=1345327419
-version.dev=00
+version.timestamp=1360796689
 version.major=3
+version.dev=01
