--- a/trunk/simulations-java/simulations/reactions-and-rates/data/reactions-and-rates/reactions-and-rates.properties
+++ b/trunk/simulations-java/simulations/reactions-and-rates/data/reactions-and-rates/reactions-and-rates.properties
@@ -1,8 +1,8 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Sat May 21 14:12:27 PDT 2011
-version.revision=52280
+#Tue Feb 19 17:05:34 MST 2013
+version.revision=72209
 version.minor=06
 sim.id=reactions-and-rates
-version.timestamp=1306012347
+version.timestamp=1361318734
+version.dev=01
 version.major=1
-version.dev=00
