photoelectric: deployed version 1.09.02 (72214) Feb 19, 2013

--- a/simulations-java/simulations/photoelectric/data/photoelectric/photoelectric.properties
+++ b/simulations-java/simulations/photoelectric/data/photoelectric/photoelectric.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Thu Mar 15 22:05:51 MDT 2012
-version.revision=62578
+#Tue Feb 19 17:52:20 MST 2013
+version.revision=72214
 version.minor=09
-version.timestamp=1331870751
+version.timestamp=1361321540
+version.dev=02
 version.major=1
-version.dev=01
