sound: deployed version 2.18.01 (72215) Feb 19, 2013

--- a/simulations-java/simulations/sound/data/sound/sound.properties
+++ b/simulations-java/simulations/sound/data/sound/sound.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Thu Jul 14 18:03:56 MDT 2011
-version.revision=54089
+#Tue Feb 19 17:56:12 MST 2013
+version.revision=72215
 version.minor=18
-version.timestamp=1310688236
+version.timestamp=1361321772
+version.dev=01
 version.major=2
-version.dev=00
