--- a/trunk/simulations-flash/simulations/my-solar-system/data/my-solar-system/my-solar-system.properties
+++ b/trunk/simulations-flash/simulations/my-solar-system/data/my-solar-system/my-solar-system.properties
@@ -1,8 +1,8 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Sat May 21 15:33:34 PDT 2011
+#Wed Feb 27 16:00:53 MST 2013
 bgcolor=\#000066
-version.revision=52285
+version.revision=72346
 version.minor=03
-version.timestamp=1306017214
-version.dev=00
+version.timestamp=1362006053
+version.dev=03
 version.major=2
