--- a/simulations-java/simulations/forces-and-motion-basics/forces-and-motion-basics-build.properties
+++ b/simulations-java/simulations/forces-and-motion-basics/forces-and-motion-basics-build.properties
@@ -3,3 +3,4 @@ project.depends.data=data
 project.depends.source=src
 project.depends.lib=piccolo-phet
 project.flavor.forces-and-motion-basics.mainclass=edu.colorado.phet.forcesandmotionbasics.ForcesAndMotionBasicsApplication
+project.flavor.forces-and-motion-basics-thumbnails.mainclass=edu.colorado.phet.forcesandmotionbasics.ForcesAndMotionBasicsThumbnailTabs
