--- a/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/forces-and-motion-basics.properties
+++ b/simulations-java/simulations/forces-and-motion-basics/data/forces-and-motion-basics/forces-and-motion-basics.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Sat Mar 09 16:33:28 MST 2013
-version.revision=72459
+#Sun Mar 10 19:19:26 MDT 2013
+version.revision=72461
 version.minor=02
-version.timestamp=1362872008
-version.dev=16
+version.timestamp=1362964766
 version.major=1
+version.dev=17
