--- a/trunk/simulations-java/simulations/energy-forms-and-changes/data/energy-forms-and-changes/energy-forms-and-changes.properties
+++ b/trunk/simulations-java/simulations/energy-forms-and-changes/data/energy-forms-and-changes/energy-forms-and-changes.properties
@@ -1,7 +1,7 @@
 #created by edu.colorado.phet.buildtools.util.ProjectPropertiesFile
-#Thu Jan 24 15:33:44 MST 2013
-version.revision=71853
+#Mon Mar 11 09:25:33 MDT 2013
+version.revision=72466
 version.minor=00
-version.timestamp=1359066824
+version.timestamp=1363015533
+version.dev=33
 version.major=0
-version.dev=32
